--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png?v=2" type="image/png" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png?v=2" type="image/png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png?v=2" type="image/png" />
+    <link rel="icon" href="/favicon.png?v=4" type="image/png" />
+    <link rel="shortcut icon" href="/favicon.png?v=4" type="image/png" />
+    <link rel="apple-touch-icon" href="/favicon.png?v=4" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="TheSchumann - Experience Deeper Sleep & Natural Wellness"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>TheSchumann</title>
   </head>
   <body>
